fix: remove scrollbar from background during mat-dialog-overlays

--- a/client/projects/shell/src/styles.scss
+++ b/client/projects/shell/src/styles.scss
@@ -5,6 +5,10 @@ html {
   height: 100%;
 }
 
+.cdk-global-scrollblock {
+  overflow-y: hidden;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   height: 100%;
